Buscador de preguntas

--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -7,3 +7,12 @@
     </tr>
 <% } %>
 </table>
+
+
+<p>
+    <form method="get" action="/quizes">
+        <p>Buscador</p>
+        <input type="text" name="search" value="Texto a buscar" />
+        <input type="submit" value="Buscar" />
+    </form>
+</p>
