--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -1,5 +1,13 @@
 body{
-	background: #333;
+	background-image: url("images/fondo.png");
+}
+
+#bg{
+    position:fixed;
+    text-align: center;
+    width: 100%;
+    min-height: 100%;
+    height: 50%;
 }
 
 #page-wrap:after{
@@ -8,16 +16,25 @@ body{
 
 h2 span, section h3, label.rem{
 	display: none;
+    opacity:0.8; /*Opacidad de 80%*/
+    text-align: center
 }
 
 body{
 	font-size: xx-large;
+	text-align: center
 }
 
 input, button{
-    font-size: x-large;
+	font-size: x-large;
+    opacity:0.8; /*Opacidad de 80%*/  
 }
 
 footer{
 	font-size: large;
-} 
+    opacity:0.8; /*Opacidad de 80%*/  
+}
+
+#yo{
+    opacity:1; /*Opacidad de 100%*/
+}
