--- a/public/stylesheets/wide.css
+++ b/public/stylesheets/wide.css
@@ -1,8 +1,44 @@
-body { background: #999; }
+body { 
+	background-image: url("images/fondo.png");
+}
+
+#bg{
+    position:fixed;
+    text-align: center;
+    width: 100%;
+    min-height: 100%;
+    height: 50%;
+}
 
 #page-wrap:after { content: "Wide Layout"; }
 
-nav       { float: left; width: 15%; height: 200px ;}
-nav span  { margin: 0px 100px 0px 0px;}
-section   { float: right; width: 80%; height: 200px ;}
-footer    { clear: both;  display: block; } 
+nav       { 
+	float: left; 
+	width: 15%; 
+	height: 200px;
+	opacity:0.8; /*Opacidad de 80%*/  
+}
+
+nav span  { 
+	margin: 0px 100px 0px 0px;
+	opacity:0.8; /*Opacidad de 80%*/
+	text-align: center
+}
+
+section   { 
+	float: right; 
+	width: 80%; 
+	height: 200px ;
+	opacity:0.8; /*Opacidad de 80%*/
+	text-align: center
+}
+
+footer    { 
+	clear: both;
+	display: block;
+	opacity:0.8; /*Opacidad de 80%*/  
+}
+
+#yo{
+    opacity:1; /*Opacidad de 100%*/
+}
