--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,2 @@
-<h3>Bienvenido a <%= title %></h3>
-El portal donde podrá crear sus propios juegos!
+<h3>Estás en <%= title %></h3>
+Proyecto de Computación en Red
