--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,7 +29,7 @@
         <span><a href="/">Inicio</a></span>
         <span><a href="/quizes">Preguntas</a></span>
         <span><a href="/quizes/statistics">Estadísticas</a></span>
-        <span><a href="/author">Créditos (autor)</a></span>
+        <span><a href="/author">Créditos</a></span>
       </nav>
      
       <section class="main" id="s1">
