--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,10 +61,16 @@
     opacity:0.8; /*Opacidad de 80%*/
 }
 
+
 .right {
     float: right;
     opacity:0.8; /*Opacidad de 80%*/
 }
+
+.quiz_img { 
+    height: 150px; 
+    float: left;
+} 
 
 #yo{
     opacity:1; /*Opacidad de 100%*/
