--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("images/fondo.png");
+    background-image: url("images/fondo.png");
 }
 
 #bg{
@@ -8,30 +8,31 @@ body{
     width: 100%;
     min-height: 100%;
     height: 50%;
+    opacity:0.7; /*Opacidad de 70%*/
 }
 
 #page-wrap:after{
-	content: "Smartphone Layout";
+    content: "Smartphone Layout";
 }
 
 h2 span, section h3, label.rem{
-	display: none;
+    display: none;
     opacity:0.8; /*Opacidad de 80%*/
     text-align: center
 }
 
 body{
-	font-size: xx-large;
-	text-align: center
+    font-size: xx-large;
+    text-align: center
 }
 
 input, button{
-	font-size: x-large;
+    font-size: x-large;
     opacity:0.8; /*Opacidad de 80%*/  
 }
 
 footer{
-	font-size: large;
+    font-size: large;
     opacity:0.8; /*Opacidad de 80%*/  
 }
 
