--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,7 @@
     width: 100%;
     min-height: 100%;
     height: 50%;
+    opacity:0.7; /*Opacidad de 70%*/
 }
 
  #page-wrap {
@@ -77,3 +78,21 @@
 #yo{
     opacity:1; /*Opacidad de 100%*/
 }
+
+.checked    {
+    background-repeat  : no-repeat;
+    width              : 30px;
+    height             : 30px;
+    display            : block;
+    background-position: center center;
+    background-image   : url("../images/star_amarilla.png");
+}
+
+.unchecked  {
+    background-repeat  : no-repeat;
+    width              : 30px;
+    height             : 30px;
+    display            : block;
+    background-position: center center;
+    background-image   : url("../images/star_gris.png");
+} 
