--- a/public/stylesheets/wide.css
+++ b/public/stylesheets/wide.css
@@ -8,6 +8,7 @@ body {
     width: 100%;
     min-height: 100%;
     height: 50%;
+    opacity:0.7; /*Opacidad de 70%*/
 }
 
 #page-wrap:after { content: "Wide Layout"; }
