--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,7 +29,12 @@
         <span><a href="/">Inicio</a></span>
         <span><a href="/quizes">Preguntas</a></span>
         <%if(session.user)  {%>
-            <span><a href="/user/<%= session.user.id %>/quizes">Mis Preguntas</a></span>
+          <span>
+            <a href="/user/<%= session.user.id %>/quizes">Mis Preguntas</a>
+          </span>
+          <span>
+            <a href="/user/<%= session.user.id %>/favorites">Favoritos</a>
+          </span>
         <%}%>
         <span><a href="/quizes/statistics">Estadísticas</a></span>
         <span><a href="/author">Créditos</a></span>
