--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,22 +1,50 @@
 <table>
-  <% var i; for (i=0; i < quizes.length; i++) { %>        
+  <%var i;
+  for(i = 0; i < quizes.length; i++) {%>
     <tr>
-      <td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
-        <%if(session.user) {
-          if (session.user.isAdmin || session.user.id === quizes[i].UserId) {%>
-      <td><a href="/quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
       <td>
-        <form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
-          <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
-            borrar
-          </button>
-        </form>
+        <a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a>
       </td>
-      <%}}%>
-    </tr> 
-  <% } %>
+      <%if(session.user)  {
+        if(session.user.isAdmin || session.user.id === quizes[i].UserId)  {%>
+          <td>
+            <a href="/quizes/<%= quizes[i].id %>/edit">
+              <button>Editar</button>
+            </a>
+          </td>
+          <td>
+            <form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
+              <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">Borrar</button>
+            </form>
+          </td>
+        <%}%>
+          <td>
+            <%if(mark[i] === 'unchecked') {%>
+              <form method="post" action="/user/<%= session.user.id %>/favorites/<%= quizes[i].id %>?_method=put">
+                <input class="unchecked" type="submit" value="" />
+              </form>
+            <%}
+            if(mark[i] === 'checked') {%>
+              <form method="post" action="/user/<%= session.user.id %>/favorites/<%= quizes[i].id %>?_method=delete">
+                <button class="checked" type="submit" onClick="return confirm('Eliminar: <%= quizes[i].pregunta %> de Favoritos');"></button>
+              </form>
+            <%}%>
+          </td>
+      <%}%>
+    </tr>
+  <%}%>
 </table>
-<p/>
-  <%if(session.user){%>
-    <a href="/quizes/new"><button>Crear pregunta</button></a>
+
+</br>
+
+<%if(session.user)  {%>
+   <p><a href="/quizes/new"><button>Crear pregunta</button></a></p>
 <%}%>
+
+<p>
+   <form method="get" action="/quizes">
+       <p>Buscador de preguntas</p>
+       <input type="text" name="search" value="Texto a buscar" />
+       <input type="submit" value="Buscar" />
+   </form>
+</p>
