--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,4 +1,4 @@
-<p>Añadir comentario: </p>
+<p>Comentario: </p>
 <form method="post" action="/quizes/<%=quizid%>/comments/">
 <input  type="text" id="comment" name="comment[texto]" value="" />
 <button type="submit">Enviar</button>
