--- a/views/quizes/new.ejs
+++ b/views/quizes/new.ejs
@@ -1,4 +1,4 @@
-Añadir pregunta: <p>
+Pregunta: <p>
 
 <form method="post" action="/quizes/create" enctype="multipart/form-data">     
   <% include _form.ejs %>
