--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -1,4 +1,4 @@
-body { 
+body {
 }
 
 #page-wrap:after{
@@ -28,4 +28,14 @@ footer{
 } 
 
 #yo{
+}
+
+#pBienvenido{
+    font-family: "miFuente";
+	font-size: 20pt; 
+	font-style: normal; 
+	line-height: normal; 
+	font-weight: bold; 
+	color: #0066FF; 
+	text-decoration: none} 
 }
