--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,17 +13,16 @@
           href='/stylesheets/smartphone.css' />
   </head> 
  
-  <body>
+  <body id="radial-gradient">
     <div id="page-wrap">
       <header class="main" id="h1">
-          <%if(!session.user){%>
-            <span class="right"><a href="/user">Sign up</a> - <a href="/login">Login</a></span>
-          <%}else{%>
-            <span class="right"> <%=session.user.username%> - <a href="/user/<%=session.user.id%>/edit">Settings</a> - <a href="/logout">Logout</a></span>
-          <%}%>
-          <h2>Quiz<span>. El juego de las preguntas</span></h2>
+        <%if(!session.user){%>
+          <span class="right"><a href="/user">Sign up</a> - <a href="/login">Login</a></span>
+        <%}else{%>
+          <span class="right"> <%=session.user.username%> - <a href="/user/<%=session.user.id%>/edit">Settings</a> - <a href="/logout">Logout</a></span>
+        <%}%>
+        <h2>Quiz<span>. El juego de las preguntas</span></h2>
       </header>
-     
       <nav class="main" id="n1" role="navigation">
         <span><a href="/">Inicio</a></span>
         <span><a href="/quizes">Preguntas</a></span>
@@ -34,11 +33,13 @@
           <span>
             <a href="/user/<%= session.user.id %>/favorites">Favoritos</a>
           </span>
+          <span>
+            <a href="/users/">Usuarios</a>
+          </span>          
         <%}%>
         <span><a href="/quizes/statistics">Estadísticas</a></span>
-        <span><a href="/author">Créditos</a></span>
+        <span><a href="/author">Creditos</a></span>
       </nav>
-     
       <section class="main" id="s1">
         <% if (errors.length) { %>
           <span id='ErrorMsgs'>
@@ -50,10 +51,9 @@
         <% } %>
         <div><%- body %></div>
       </section>
-     
       <footer class="main" id="f1">
         <a href="http://github.com/alvarogoher/quiz">
-          Proyecto de Álvaro Gómez Hernández en GitHub</a>
+          PROYECTO DE ALVARO GOMEZ HERNANDEZ EN GITHUB</a>
       </footer>
     </div>
   </body> 
