--- a/views/quizes/statistics.ejs
+++ b/views/quizes/statistics.ejs
@@ -1,13 +1,13 @@
-<h2>Página de estadísticas</h2>
+<h2>Pagina de estadisticas</h2>
 
-<p>Nº de preguntas: <%= quizes %></p>
+<p>Numero de preguntas: <%= quizes %></p>
 
-<p>Nº de comentarios totales: <%= comments %></p>
+<p>Numero de comentarios totales: <%= comments %></p>
 
-<p>Nº medio de comentarios por pregunta: <%= comments/quizes %></p>
+<p>Numero medio de comentarios por pregunta: <%= comments/quizes %></p>
 
 <% var noCommentedQuizes = quizes - commentedQuizes %>
 
-<p>Nº de preguntas sin comentarios: <%= noCommentedQuizes %></p>
+<p>Numero de preguntas sin comentarios: <%= noCommentedQuizes %></p>
 
-<p>Nº de preguntas con comentarios: <%= commentedQuizes %></p>
+<p>Numero de preguntas con comentarios: <%= commentedQuizes %></p>
