--- a/views/user/_form.ejs
+++ b/views/user/_form.ejs
@@ -1,7 +1,12 @@
 <label for="preg" class="rem">Username:</label>
 <input type="text" id="username" name="user[username]" value="<%= user.username %>"/><p>
-	<label for="resp" class="rem">Password:</label>
+
+<label for="resp" class="rem">Password:</label>
 <input type="password" id="pass" name="user[password]"/> <p>
+
+<label for="image" class="rem">Imagen:</label>
+<input type="file" accept="image/*" id="image" name="image"/><p>
+
 <a href="/"><button type="button">Cancelar</button></a>
 <input type="submit" value="Enviar"> 
 
