--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -1,4 +1,4 @@
 Crear usuario: <p>
-<form method="post" action="/user" >      
+<form method="post" action="/user" enctype="multipart/form-data">      
 	<% include _form.ejs %>
 </form>
