Puesta a punto definitiva

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -37,7 +37,7 @@
             <a href="/users/">Usuarios</a>
           </span>          
         <%}%>
-        <span><a href="/quizes/statistics">Estadísticas</a></span>
+        <span><a href="/quizes/statistics">Estadisticas</a></span>
         <span><a href="/author">Creditos</a></span>
       </nav>
       <section class="main" id="s1">
