--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -44,7 +44,7 @@
 <p>
    <form method="get" action="/quizes">
        <p>Buscador de preguntas</p>
-       <input type="text" name="search" value="Texto a buscar" />
+       <input type="text" name="search"/>
        <input type="submit" value="Buscar" />
    </form>
 </p>
